# dmarc-extractor

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  settings.toml
src/dmarc_extractor/: __main__.py
