[project]
name = "dmarc-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "defusedxml>=0.7.1",
    "dynaconf>=3.2.11",
    "geoip2>=5.1.0",
    "jmapc>=0.2.23",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
]

# [tool.uv.sources]
# jmapc = { path = "jmapc", editable = true }
