[project]
name = "dmarc-extractor"
version = "0.1.0"
description = "A DMARC record extraction tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "defusedxml>=0.7.1",
    "dynaconf>=3.2.11",
    "geoip2>=5.1.0",
    "jmapc>=0.2.23",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
]

[project.scripts]
dmarc = "dmarc_extractor.__main__:cli"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.isort]
py_version=313
profile = "black"
